--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <section>
         <article>
             <h2>Raviraj Tekale Portfolio</h2>
-            <p>Raviraj Tekale 
-                Batch CS 1
-                PRN : 202302040010
+            <p>Raviraj Tekale
+        
             </p>
         </article>
         
@@ -56,15 +55,15 @@
             <tbody>
                 <tr>
                     <td>10th</td>
-                    <td>60%</td>
+                    <td>95%</td>
                 </tr>
                 <tr>
                     <td>12th</td>
-                    <td>60%</td>
+                    <td>90%</td>
                 </tr>
                 <tr>
-                    <td>B.E. Computer Science</td>
-                    <td>6.2 CGPA</td>
+                    <td>BTech. Computer Science</td>
+                    <td>9.2 CGPA</td>
                 </tr>
             </tbody>
         </table>
