--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Raviraj Tekale All rights reserved.</p>
+        <p>&copy; 2024 Raviraj Tekale. All rights reserved.</p>
     </footer>
 </body>
 </html>
