--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <section>
         <article>
             <h2>About Me</h2>
-            <p> Raviraj Tekale is a Software developer from Batch CS 1 PRN: 202302040010.</p>
+            <p> Raviraj Tekale is a Engineering student currently persuing from MIT Academy od engineering, Pune in Computer Science.</p>
             <blockquote>
               "Raviraj Tekale is a Student who developed this portfolio "
 
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 RAviraj Tekale. All rights reserved.</p>
+        <p>&copy; 2024 Raviraj Tekale. All rights reserved.</p>
     </footer>
 </body>
 </html>
